--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "shadow-memory"]
 	path = shadow-memory
-	url = https://github.com/cronburg/shadow-memory
+	url = https://gitlab.rhrk.uni-kl.de/aehle/shadow-memory.git 
