--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: ubuntu:18.04
+image: ubuntu:20.04
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
@@ -7,7 +7,7 @@ build:
   stage: build
   script:
     - apt-get update
-    - apt-get install -y build-essential automake
+    - apt-get install -y build-essential automake gcc-multilib
     - ./autogen.sh
     - CFLAGS=-g ./configure --prefix=$PWD/install
     - make install
@@ -18,6 +18,7 @@ build:
 test:
   stage: test
   script:
+    - export DEBIAN_FRONTEND=noninteractive
     - apt-get update
-    - apt-get install -y python3
+    - apt-get install -y build-essential python3 gdb gcc-multilib libc6-dbg
     - cd none/diff_tests && python3 run_tests.py
