--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,5 +20,5 @@ test:
   script:
     - export DEBIAN_FRONTEND=noninteractive
     - apt-get update
-    - apt-get install -y build-essential python3 gdb gcc-multilib libc6-dbg
+    - apt-get install -y build-essential python3 python3-numpy gdb gcc-multilib libc6-dbg
     - cd none/diff_tests && python3 run_tests.py
