--- a/none/Makefile.am
+++ b/none/Makefile.am
@@ -3,6 +3,13 @@ include $(top_srcdir)/Makefile.tool.am
 EXTRA_DIST = docs/nl-manual.xml
 
 #----------------------------------------------------------------------------
+# Headers
+#----------------------------------------------------------------------------
+
+pkginclude_HEADERS = \
+  derivgrind.h
+
+#----------------------------------------------------------------------------
 # none-<platform>
 #----------------------------------------------------------------------------
 
