Improve documentation of replacement libm, and small fixes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ build:
     paths:
       - install/
       - none/libm-replacement/libm.so*
+      - none/libm-replacement/libmoriginal.so*
 
 test:
   stage: test
