--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,4 +26,5 @@ test:
     - export DEBIAN_FRONTEND=noninteractive
     - apt-get update
     - apt-get install -y build-essential python3 python3-numpy gdb gcc-multilib libc6-dbg
+    - export DG_CONSTRAINED_ENVIRONMENT=1
     - cd none/diff_tests && python3 run_tests.py
