--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ build:
   stage: build
   script:
     - apt-get update
-    - apt-get install -y build-essential binutils automake gcc-multilib python3
+    - apt-get install -y build-essential binutils automake gcc-multilib python3 gfortran
     - ./autogen.sh
     - CFLAGS=-g ./configure --prefix=$PWD/install
     - make install
@@ -27,6 +27,6 @@ test:
   script:
     - export DEBIAN_FRONTEND=noninteractive
     - apt-get update
-    - apt-get install -y build-essential python3 python3-numpy gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg
+    - apt-get install -y build-essential gfortran python3 python3-numpy gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg
     - export DG_CONSTRAINED_ENVIRONMENT=1
     - cd none/diff_tests && python3 run_tests.py
