--- a/none/Makefile.am
+++ b/none/Makefile.am
@@ -18,7 +18,7 @@ if VGCONF_HAVE_PLATFORM_SEC
 noinst_PROGRAMS += none-@VGCONF_ARCH_SEC@-@VGCONF_OS@
 endif
 
-NONE_SOURCES_COMMON = nl_main.c ../shadow-memory/src/shadow-64.c
+NONE_SOURCES_COMMON = nl_main.c ../shadow-memory/src/shadow-64.c nl_logical.c
 
 none_@VGCONF_ARCH_PRI@_@VGCONF_OS@_SOURCES      = \
 	$(NONE_SOURCES_COMMON)
