--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ build:
     - CFLAGS=-g ./configure --prefix=$PWD/install
     - make install
     - cd none/libm-extension && python3 compile.py && cd -
-    - cd none/diff_tests && gfortran -c derivgrind_clientrequests.f90 && cd - # seems to work with and without -m32
+    - cd none/diff_tests && ./setup.sh && cd - 
   artifacts:
     paths:
       - install/
@@ -20,7 +20,8 @@ build:
       - none/libm-extension/lib32/libmoriginal.so
       - none/libm-extension/lib64/libmextension.so
       - none/libm-extension/lib64/libmoriginal.so
-      - none/diff_tests/derivgrind_clientrequests.mod
+      - none/diff_tests/fortran/derivgrind_clientrequests.mod
+      - none/diff_tests/python/derivgrind.so
 
 test:
   stage: test
