--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,11 +23,20 @@ build:
       - none/diff_tests/fortran/derivgrind_clientrequests.mod
       - none/diff_tests/python/derivgrind.so
 
-test:
+test_x86:
   stage: test
   script:
     - export DEBIAN_FRONTEND=noninteractive
     - apt-get update
     - apt-get install -y build-essential gfortran python3 python3-numpy gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg
-    - export DG_CONSTRAINED_ENVIRONMENT=1
-    - cd none/diff_tests && python3 run_tests.py
+    - dpkg --add-architecture i386
+    - apt-get install -y python3:i386
+    - cd none/diff_tests && python3 run_tests.py x86*
+
+test_amd64:
+  stage: test
+  script:
+    - export DEBIAN_FRONTEND=noninteractive
+    - apt-get update
+    - apt-get install -y build-essential gfortran python3 python3-numpy gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg
+    - cd none/diff_tests && python3 run_tests.py amd64*
