--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,6 +30,7 @@ test_x86:
     - apt-get update
     - apt-get install -y build-essential gfortran python3 python3-numpy gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg
     - dpkg --add-architecture i386
+    - apt-get update
     - apt-get install -y python3:i386
     - cd none/diff_tests && python3 run_tests.py x86*
 
