--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,12 +7,11 @@ build:
   stage: build
   script:
     - apt-get update
-    - apt-get install -y build-essential binutils automake gcc-multilib python3 gfortran git python3-dev
+    - apt-get install -y build-essential binutils automake gcc-multilib python3 gfortran
     - ./autogen.sh
     - CFLAGS=-g ./configure --prefix=$PWD/install
     - make install
     - cd none/libm-extension && python3 compile.py && cd -
-    - cd none/diff_tests && ./setup.sh && cd - 
   artifacts:
     paths:
       - install/
@@ -20,18 +19,17 @@ build:
       - none/libm-extension/lib32/libmoriginal.so
       - none/libm-extension/lib64/libmextension.so
       - none/libm-extension/lib64/libmoriginal.so
-      - none/diff_tests/fortran/derivgrind_clientrequests.mod
-      - none/diff_tests/python/derivgrind.so
 
 test_x86:
   stage: test
   script:
     - export DEBIAN_FRONTEND=noninteractive
     - apt-get update
-    - apt-get install -y build-essential gfortran python3 python3-numpy gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg
+    - apt-get install -y build-essential gfortran gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg git
     - dpkg --add-architecture i386
     - apt-get update
-    - apt-get install -y python3:i386 python3-numpy:i386
+    - apt-get install -y python3:i386 python3-numpy:i386 python3-dev:i386
+    - cd none/diff_tests && ./setup.sh && cd - 
     - cd none/diff_tests && python3 run_tests.py x86*
 
 .test_amd64:
@@ -39,5 +37,6 @@ test_x86:
   script:
     - export DEBIAN_FRONTEND=noninteractive
     - apt-get update
-    - apt-get install -y build-essential gfortran python3 python3-numpy gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg
+    - apt-get install -y build-essential gfortran python3 python3-numpy python3-dev gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg git
+    - cd none/diff_tests && ./setup.sh && cd - 
     - cd none/diff_tests && python3 run_tests.py amd64*
