CALL_FN_D_D more analogous to CALL_FN_W_W

--- a/include/valgrind.h.in
+++ b/include/valgrind.h.in
@@ -1663,9 +1663,12 @@ typedef
 /* ARGREGS: rdi rsi rdx rcx r8 r9 (the rest on stack in R-to-L order) */
 
 /* These regs are trashed by the hidden call. */
+/* When rax and xmm0 are used for return values, the __asm__ syntax
+ * does not accept them being declared as "trashed" at the same time.
+ * Therefore explicitly add the one you did not use. */
 #define __CALLER_SAVED_REGS /*"rax",*/ "rcx", "rdx", "rsi",       \
                             "rdi", "r8", "r9", "r10", "r11",       \
-                            "xmm0", "xmm1","xmm2","xmm3","xmm4","xmm5","xmm6", "xmm7", \
+                            /*"xmm0",*/ "xmm1","xmm2","xmm3","xmm4","xmm5","xmm6", "xmm7", \
                             "xmm8", "xmm9","xmm10","xmm11","xmm12","xmm13","xmm14", "xmm15"
 
 /* This is all pretty complex.  It's so as to make stack unwinding
@@ -1831,17 +1834,15 @@ typedef
          VALGRIND_ALIGN_STACK                                          \
          "subq $128,%%rsp\n\t"                                         \
          "movsd 8(%%rax), %%xmm0\n\t"                                    \
-         "movq %%rax, %%r13\n\t" \
          "movq (%%rax), %%rax\n\t"  /* target->%rax */                 \
          VALGRIND_CALL_NOREDIR_RAX  \
-         "movsd %%xmm0, 8(%%r13)\n\t" \
          VALGRIND_RESTORE_STACK                                        \
          VALGRIND_CFI_EPILOGUE                                         \
-         : /*out*/   "=m" (_argvec[1])                                       \
+         : /*out*/   "=Yz" (_res)                                       \
          : /*in*/    "a" (&_argvec[0]) __FRAME_POINTER                 \
-         : /*trash*/ "cc", "memory", __CALLER_SAVED_REGS, "xmm0", "r13", "r14", "r15" \
+         : /*trash*/ "cc", "memory", __CALLER_SAVED_REGS, "r14", "r15" \
       );      \
-       double res_d = *(double*)&_argvec[1];\
+       double res_d = *(double*)&_res;\
       lval = (__typeof__(lval)) res_d;                                  \
    } while (0)
 
