--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,17 +8,13 @@ build:
   script:
     - apt-get update
     - apt-get install -y build-essential binutils automake gcc-multilib python3 gfortran
+    - cd derivgrind && python3 gen_replace_math.py && cd -
     - ./autogen.sh
     - CFLAGS=-g ./configure --prefix=$PWD/install
     - make install
-    - cd none/libm-extension && python3 compile.py && cd -
   artifacts:
     paths:
       - install/
-      - none/libm-extension/lib32/libmextension.so
-      - none/libm-extension/lib32/libmoriginal.so
-      - none/libm-extension/lib64/libmextension.so
-      - none/libm-extension/lib64/libmoriginal.so
 
 test_x86:
   stage: test
@@ -29,8 +25,8 @@ test_x86:
     - dpkg --add-architecture i386
     - apt-get update
     - apt-get install -y python3:i386 python3-numpy:i386 python3-dev:i386
-    - cd none/diff_tests && ./setup.sh && cd - 
-    - cd none/diff_tests && python3 run_tests.py x86*
+    - cd derivgrind/diff_tests && ./setup.sh && cd - 
+    - cd derivgrind/diff_tests && python3 run_tests.py x86*
 
 .test_amd64:
   stage: test
@@ -38,5 +34,5 @@ test_x86:
     - export DEBIAN_FRONTEND=noninteractive
     - apt-get update
     - apt-get install -y build-essential gfortran python3 python3-numpy python3-dev gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg git
-    - cd none/diff_tests && ./setup.sh && cd - 
-    - cd none/diff_tests && python3 run_tests.py amd64*
+    - cd derivgrind/diff_tests && ./setup.sh && cd - 
+    - cd derivgrind/diff_tests && python3 run_tests.py amd64*
