--- a/include/valgrind.h.in
+++ b/include/valgrind.h.in
@@ -1285,6 +1285,28 @@ typedef
       lval = (__typeof__(lval)) _res;                             \
    } while (0)
 
+#define CALL_FN_F_F(lval, orig, arg1)                             \
+   do {                                                           \
+      volatile OrigFn        _orig = (orig);                      \
+      volatile unsigned long _argvec[2];                          \
+      volatile long double _res;                                \
+      _argvec[0] = (unsigned long)_orig.nraddr;                   \
+      _argvec[1] = *(unsigned long*)&(arg1);                         \
+      __asm__ volatile(                                           \
+         VALGRIND_ALIGN_STACK                                     \
+         "subl $12, %%esp\n\t"                                    \
+         "pushl 4(%%eax)\n\t"                                     \
+         "movl (%%eax), %%eax\n\t"  /* target->%eax */            \
+         VALGRIND_CALL_NOREDIR_EAX                                \
+         VALGRIND_RESTORE_STACK                                   \
+         : /*out*/   "=t" (_res)                                  \
+         : /*in*/    "a" (&_argvec[0])                            \
+         : /*trash*/ "cc", "memory", __CALLER_SAVED_REGS, "edi"   \
+      );                                                          \
+      float res_f = _res; \
+      lval = (__typeof__(lval)) res_f;                             \
+   } while (0)
+
 #define CALL_FN_W_WW(lval, orig, arg1,arg2)                       \
    do {                                                           \
       volatile OrigFn        _orig = (orig);                      \
@@ -1820,6 +1842,13 @@ typedef
       );                                                               \
       lval = (__typeof__(lval)) _res;                                  \
    } while (0)
+
+
+// On amd64, the calling convention does not distinguish between
+// binary32 and binary64 data, they are both stored and returned
+// in xmm0, (xmm1, ...).
+#define CALL_FN_F_F(lval, orig, arg1) \
+  CALL_FN_D_D(lval, orig, arg1)
 
 #define CALL_FN_D_D(lval, orig, arg1)                                  \
    do {                                                                \
