--- a/include/valgrind.h.in
+++ b/include/valgrind.h.in
@@ -1304,7 +1304,32 @@ typedef
          : /*trash*/ "cc", "memory", __CALLER_SAVED_REGS, "edi",  \
              "st(1)", "st(2)", "st(3)", "st(4)", "st(5)", "st(6)", "st(7)" \
       );                                                          \
-      float res_f = _res; \
+      volatile float res_f = _res; \
+      lval = (__typeof__(lval)) res_f;                             \
+   } while (0)
+
+#define CALL_FN_D_D(lval, orig, arg1)                             \
+   do {                                                           \
+      volatile OrigFn        _orig = (orig);                      \
+      volatile unsigned long _argvec[3];                          \
+      volatile long double _res;                                \
+      _argvec[0] = (unsigned long)_orig.nraddr;                   \
+      _argvec[1] = *(unsigned long*)&(arg1);                         \
+      _argvec[2] = *( (unsigned long*)&(arg1) + 1 ); \
+      __asm__ volatile(                                           \
+         VALGRIND_ALIGN_STACK                                     \
+         "subl $8, %%esp\n\t"                                    \
+         "pushl 8(%%eax)\n\t" \
+         "pushl 4(%%eax)\n\t"                                     \
+         "movl (%%eax), %%eax\n\t"  /* target->%eax */            \
+         VALGRIND_CALL_NOREDIR_EAX                                \
+         VALGRIND_RESTORE_STACK                                   \
+         : /*out*/   "=t" (_res)                                  \
+         : /*in*/    "a" (&_argvec[0])                            \
+         : /*trash*/ "cc", "memory", __CALLER_SAVED_REGS, "edi",  \
+             "st(1)", "st(2)", "st(3)", "st(4)", "st(5)", "st(6)", "st(7)" \
+      );                                                          \
+      volatile double res_f = _res; \
       lval = (__typeof__(lval)) res_f;                             \
    } while (0)
 
