Add CALL_FN_L_L on x86, for x87 80-bit type

--- a/include/valgrind.h.in
+++ b/include/valgrind.h.in
@@ -1333,6 +1333,33 @@ typedef
       lval = (__typeof__(lval)) res_f;                             \
    } while (0)
 
+#define CALL_FN_L_L(lval, orig, arg1)                             \
+   do {                                                           \
+      volatile OrigFn        _orig = (orig);                      \
+      volatile unsigned long _argvec[4];                          \
+      volatile long double _res;                                \
+      _argvec[0] = (unsigned long)_orig.nraddr;                   \
+      _argvec[1] = *(unsigned long*)&(arg1);                         \
+      _argvec[2] = *( (unsigned long*)&(arg1) + 1 ); \
+      _argvec[3] = *( (unsigned long*)&(arg1) + 2 ); \
+      __asm__ volatile(                                           \
+         VALGRIND_ALIGN_STACK                                     \
+         "subl $4, %%esp\n\t"                                    \
+         "pushl 12(%%eax)\n\t" \
+         "pushl 8(%%eax)\n\t" \
+         "pushl 4(%%eax)\n\t"                                     \
+         "movl (%%eax), %%eax\n\t"  /* target->%eax */            \
+         VALGRIND_CALL_NOREDIR_EAX                                \
+         VALGRIND_RESTORE_STACK                                   \
+         : /*out*/   "=t" (_res)                                  \
+         : /*in*/    "a" (&_argvec[0])                            \
+         : /*trash*/ "cc", "memory", __CALLER_SAVED_REGS, "edi",  \
+             "st(1)", "st(2)", "st(3)", "st(4)", "st(5)", "st(6)", "st(7)" \
+      );                                                          \
+      volatile long double res_f = _res; \
+      lval = (__typeof__(lval)) res_f;                             \
+   } while (0)
+
 #define CALL_FN_W_WW(lval, orig, arg1,arg2)                       \
    do {                                                           \
       volatile OrigFn        _orig = (orig);                      \
