Add CALL_FN_F_FW etc., and more math.h functions, for x86

--- a/include/valgrind.h.in
+++ b/include/valgrind.h.in
@@ -1311,6 +1311,8 @@ typedef
       lval = (__typeof__(lval)) _res;                             \
    } while (0)
 
+/*-- (fp type) -> fp type --*/
+
 #define CALL_FN_F_F(lval, orig, arg1) \
   CALL_FN_FP_FP(lval, orig,  \
     volatile unsigned long _argvec[2];                          \
@@ -1331,6 +1333,8 @@ typedef
     _argvec[2] = *( (unsigned long*)&(arg1) + 1 ); \
     _argvec[3] = *( (unsigned long*)&(arg1) + 2 );, \
     "subl $4, %%esp\n\t pushl 12(%%eax)\n\t pushl 8(%%eax)\n\t pushl 4(%%eax)\n\t" )
+
+/*-- (fp type, fp type) -> fp type --*/
 
 #define CALL_FN_F_FF(lval, orig, arg1, arg2) \
   CALL_FN_FP_FP(lval, orig,  \
@@ -1364,6 +1368,32 @@ typedef
     "pushl 12(%%eax)\n\t"                                    \
     "pushl 8(%%eax)\n\t"                                     \
     "pushl 4(%%eax)\n\t"      )
+
+/*-- (fp type, doubleword) -> fp type --*/
+
+#define CALL_FN_F_FW(lval, orig, arg1, arg2) \
+  CALL_FN_FP_FP(lval, orig,  \
+    volatile unsigned long _argvec[3];                          \
+    _argvec[1] = *(unsigned long*)&(arg1); \
+    _argvec[2] = *(unsigned long*)&(arg2);,                  \
+    "subl $8, %%esp\n\t pushl 8(%%eax)\n\t pushl 4(%%eax)\n\t"   )
+
+#define CALL_FN_D_DW(lval, orig, arg1, arg2) \
+  CALL_FN_FP_FP(lval, orig,  \
+    volatile unsigned long _argvec[4];                          \
+    _argvec[1] = *(unsigned long*)&(arg1); \
+    _argvec[2] = *( (unsigned long*)&(arg1) + 1 );  \
+    _argvec[3] = *(unsigned long*)&(arg2);,                  \
+    "subl $4, %%esp\n\t pushl 12(%%eax)\n\t pushl 8(%%eax)\n\t pushl 4(%%eax)\n\t"   )
+
+#define CALL_FN_L_LW(lval, orig, arg1, arg2)       \
+  CALL_FN_FP_FP(lval, orig, \
+    volatile unsigned long _argvec[5]; \
+    _argvec[1] = *(unsigned long*)&(arg1);       \
+    _argvec[2] = *( (unsigned long*)&(arg1) + 1 ); \
+    _argvec[3] = *( (unsigned long*)&(arg1) + 2 ); \
+    _argvec[4] = *(unsigned long*)&(arg2);,       \
+    "pushl 16(%%eax)\n\t pushl 12(%%eax)\n\t pushl 8(%%eax)\n\t pushl 4(%%eax)\n\t" )
 
 #define CALL_FN_W_WW(lval, orig, arg1,arg2)                       \
    do {                                                           \
