--- a/include/valgrind.h.in
+++ b/include/valgrind.h.in
@@ -1288,8 +1288,8 @@ typedef
 /*! Pattern for the macros to call unwrapped floating-point functions.
  * \param lval - Return value
  * \param orig - Handle to unwrapped function
- * \param argvec_def - C code forming the array of values that go on the stack.
- * \param pushes - Assembler instructions pushing values to the stack.
+ * \param argvec_def - C code forming the array of parameters that go on the stack.
+ * \param pushes - Assembler instructions pushing parameters to the stack.
  */
 #define CALL_FN_FP_FP(lval, orig, argvec_def, pushes) \
    do {                                                           \
@@ -1931,64 +1931,55 @@ typedef
       lval = (__typeof__(lval)) _res;                                  \
    } while (0)
 
+/*! Pattern for the macros to call unwrapped floating-point functions.
+ * \param lval - Return value
+ * \param orig - Handle to unwrapped function
+ * \param outputreg - Constraint for output register.
+ * \param argvec_def - C code forming the array of parameters, and declaring res.
+ * \param pushes - Assembler instructions moving parameters into registers, etc.
+ */
+#define CALL_FN_FP_FP(lval, orig, outputreg, argvec_def, pushes) \
+   do {                                                                \
+      volatile OrigFn        _orig = (orig);                           \
+      argvec_def                                    \
+      _argvec[0] = (unsigned long)_orig.nraddr;  \
+      __asm__ volatile(                                                \
+         VALGRIND_CFI_PROLOGUE                                         \
+         VALGRIND_ALIGN_STACK                                          \
+         pushes \
+         "movq (%%rax), %%rax\n\t"  /* target->%rax */                 \
+         VALGRIND_CALL_NOREDIR_RAX  \
+         VALGRIND_RESTORE_STACK                                        \
+         VALGRIND_CFI_EPILOGUE                                         \
+         : /*out*/   outputreg (_res)                                       \
+         : /*in*/    "a" (&_argvec[0]) __FRAME_POINTER                 \
+         : /*trash*/ "cc", "memory", __CALLER_SAVED_REGS, "r14", "r15" \
+      );      \
+      lval = *(__typeof__(lval)*)& _res;                                  \
+   } while (0)
 
-// On amd64, the calling convention does not distinguish between
-// binary32 and binary64 data, they are both stored and returned
-// in xmm0, (xmm1, ...).
-#define CALL_FN_F_F(lval, orig, arg1) \
-  CALL_FN_D_D(lval, orig, arg1)
+#define CALL_FN_F_F(lval, orig, arg1)                                  \
+  CALL_FN_FP_FP(lval, orig, "=Yz", \
+  volatile unsigned long _res; \
+  volatile unsigned long _argvec[2];                          \
+  _argvec[1] = (unsigned long) *(unsigned int*)&(arg1);,        \
+  "subq $128,%%rsp\n\t movss 8(%%rax), %%xmm0\n\t"  )
 
 #define CALL_FN_D_D(lval, orig, arg1)                                  \
-   do {                                                                \
-      volatile OrigFn        _orig = (orig);                           \
-      volatile unsigned long _argvec[2];                               \
-      volatile unsigned long _res;                                     \
-      _argvec[0] = (unsigned long)_orig.nraddr;  \
-      _argvec[1] = *(unsigned long*)&(arg1);                              \
-      __asm__ volatile(                                                \
-         VALGRIND_CFI_PROLOGUE                                         \
-         VALGRIND_ALIGN_STACK                                          \
-         "subq $128,%%rsp\n\t"                                         \
-         "movsd 8(%%rax), %%xmm0\n\t"                                    \
-         "movq (%%rax), %%rax\n\t"  /* target->%rax */                 \
-         VALGRIND_CALL_NOREDIR_RAX  \
-         VALGRIND_RESTORE_STACK                                        \
-         VALGRIND_CFI_EPILOGUE                                         \
-         : /*out*/   "=Yz" (_res)                                       \
-         : /*in*/    "a" (&_argvec[0]) __FRAME_POINTER                 \
-         : /*trash*/ "cc", "memory", __CALLER_SAVED_REGS, "r14", "r15" \
-      );      \
-       volatile double res_d = *(double*)&_res;\
-      lval = (__typeof__(lval)) res_d;                                  \
-   } while (0)
+  CALL_FN_FP_FP(lval, orig, "=Yz",  \
+  volatile unsigned long _res; \
+  volatile unsigned long _argvec[2];                          \
+  _argvec[1] = *(unsigned long*)&(arg1);,                              \
+  "subq $128,%%rsp\n\t movsd 8(%%rax), %%xmm0\n\t"  )
 
 // long double is passed on the stack and returned in ST0
-
 #define CALL_FN_L_L(lval, orig, arg1)                                  \
-   do {                                                                \
-      volatile OrigFn        _orig = (orig);                           \
-      volatile unsigned long _argvec[3];                               \
-      volatile long double _res;                                     \
-      _argvec[0] = (unsigned long)_orig.nraddr;  \
-      _argvec[1] = *(unsigned long*)&(arg1);                              \
-      _argvec[2] = *((unsigned long*)&(arg1)+1); \
-      __asm__ volatile(                                                \
-         VALGRIND_CFI_PROLOGUE                                         \
-         VALGRIND_ALIGN_STACK                                          \
-         "subq $128,%%rsp\n\t"                                         \
-         "pushq 16(%%rax)\n\t" \
-         "pushq 8(%%rax)\n\t" \
-         "movq (%%rax), %%rax\n\t"  /* target->%rax */                 \
-         VALGRIND_CALL_NOREDIR_RAX  \
-         VALGRIND_RESTORE_STACK                                        \
-         VALGRIND_CFI_EPILOGUE                                         \
-         : /*out*/   "=t" (_res)                                       \
-         : /*in*/    "a" (&_argvec[0]) __FRAME_POINTER                 \
-         : /*trash*/ "cc", "memory", __CALLER_SAVED_REGS, "r14", "r15" \
-      );      \
-      volatile long double res_d = _res;\
-      lval = (__typeof__(lval)) res_d;                                  \
-   } while (0)
+  CALL_FN_FP_FP(lval, orig, "=t", \
+  volatile long double _res; \
+  volatile unsigned long _argvec[3];                          \
+  _argvec[1] = *(unsigned long*)&(arg1);                              \
+  _argvec[2] = *((unsigned long*)&(arg1)+1);, \
+  "subq $128,%%rsp\n\t pushq 16(%%rax)\n\t pushq 8(%%rax)\n\t" )
 
 #define CALL_FN_W_WW(lval, orig, arg1,arg2)                            \
    do {                                                                \
