--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ build:
     paths:
       - install/
 
-test_x86:
+test_dot_x86:
   stage: test
   script:
     - export DEBIAN_FRONTEND=noninteractive
@@ -29,7 +29,19 @@ test_x86:
     - cd derivgrind/diff_tests && ./setup.sh && cd - 
     - cd derivgrind/diff_tests && python3 run_tests.py dot_x86*
 
-.test_amd64:
+test_bar_x86:
+  stage: test
+  script:
+    - export DEBIAN_FRONTEND=noninteractive
+    - apt-get update
+    - apt-get install -y build-essential gfortran gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg git clang libomp-dev
+    - dpkg --add-architecture i386
+    - apt-get update
+    - apt-get install -y python3:i386 python3-numpy:i386 python3-dev:i386
+    - cd derivgrind/diff_tests && ./setup.sh && cd - 
+    - cd derivgrind/diff_tests && python3 run_tests.py bar_x86*
+
+.test_dot_amd64:
   stage: test
   script:
     - export DEBIAN_FRONTEND=noninteractive
@@ -37,3 +49,12 @@ test_x86:
     - apt-get install -y build-essential gfortran python3 python3-numpy python3-dev gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg git clang libomp-dev
     - cd derivgrind/diff_tests && ./setup.sh && cd - 
     - cd derivgrind/diff_tests && python3 run_tests.py dot_amd64*
+
+.test_bar_amd64:
+  stage: test
+  script:
+    - export DEBIAN_FRONTEND=noninteractive
+    - apt-get update
+    - apt-get install -y build-essential gfortran python3 python3-numpy python3-dev gdb gcc-multilib g++-multilib gfortran-multilib libc6-dbg git clang libomp-dev
+    - cd derivgrind/diff_tests && ./setup.sh && cd - 
+    - cd derivgrind/diff_tests && python3 run_tests.py bar_amd64*
