Improve code structure and documentation, part 2.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ build:
   script:
     - apt-get update
     - apt-get install -y build-essential binutils automake gcc-multilib python3 gfortran
-    - cd derivgrind && python3 gen_replace_math.py && python3 gen_dot_operations.py dot > dot/dg_dot_operations.c && python3 gen_dot_operations.py bar > bar/dg_bar_operations.c && cd -
+    - cd derivgrind && python3 gen_replace_math.py && python3 gen_operationhandling_code.py dot > dot/dg_dot_operations.c && python3 gen_operationhandling_code.py bar > bar/dg_bar_operations.c && cd -
     - ./autogen.sh
     - CFLAGS=-g ./configure --prefix=$PWD/install
     - make install
