Include derivgrind-recording.h from derivgrind.h
so the client program only needs to include derivgrind.h in any
case.

--- a/derivgrind/Makefile.am
+++ b/derivgrind/Makefile.am
@@ -7,7 +7,7 @@ include $(top_srcdir)/Makefile.tool.am
 #----------------------------------------------------------------------------
 
 pkginclude_HEADERS = \
-  derivgrind.h bar/derivgrind-recording.h
+  derivgrind.h derivgrind-recording.h
 
 #----------------------------------------------------------------------------
 # derivgrind-<platform>
